# EDACurry

./: CITATION.cff  LICENSE  README.md
grammar/: Makefile  README.md
grammar/g4files/: ELDOLexer.g4  ELDOParser.g4  SPECTRELexer.g4  SPECTREParser.g4
sources/: .clang-format  .gitignore  CMakeLists.txt  README.md
sources/cmake/: FindANTLR4.cmake
sources/doc/: CMakeLists.txt  Doxyfile
sources/include/: classes.hpp  enums.hpp  factory.hpp
sources/include/antlr4parser/: ELDOLexer.h  ELDOParser.h  ELDOParserBaseListener.h  ELDOParserBaseVisitor.h  ELDOParserListener.h  ELDOParserVisitor.h  SPECTRELexer.h  SPECTREParser.h  SPECTREParserBaseListener.h  SPECTREParserBaseVisitor.h  SPECTREParserListener.h  SPECTREParserVisitor.h
sources/include/backend/: eldo_backend.hpp  indented_stream.hpp  json_backend.hpp  xml_backend.hpp
sources/include/edacurry/: classes.hpp  factory.hpp
sources/include/edacurry/backend/: eldo_backend.hpp  xml_backend.hpp
sources/include/edacurry/features/: owned_list.hpp
sources/include/edacurry/frontend/: eldo_frontend.hpp  json_frontend.hpp  spectre_frontend.hpp  xml_frontend.hpp
sources/include/edacurry/structure/: analysis.hpp  circuit.hpp  component.hpp  control.hpp  expression.hpp  expression_unary.hpp  function_call.hpp  identifier.hpp  include.hpp  library.hpp  library_def.hpp  model.hpp  node.hpp  object.hpp  parameter.hpp  string.hpp  subckt.hpp  value.hpp  value_list.hpp  value_pair.hpp
sources/include/edacurry/utility/: logging.hpp  typename.hpp
sources/include/features/: named_object.hpp  object_list.hpp  object_reference.hpp  visitable_object.hpp
sources/include/frontend/: eldo_frontend.hpp  json_frontend.hpp  spectre_frontend.hpp
sources/include/structure/: analysis.hpp  circuit.hpp  component.hpp  control.hpp  control_scope.hpp  expression.hpp  expression_unary.hpp  function_call.hpp  identifier.hpp  include.hpp  library.hpp  library_def.hpp  model.hpp  node.hpp  number.hpp  object.hpp  parameter.hpp  string.hpp  subckt.hpp  value.hpp  value_list.hpp  value_pair.hpp
sources/include/utility/: json.hpp  typename.hpp  utility.hpp
sources/include/utility/json/: json.hpp
sources/include/utility/json/ordered_map/: ordered_map.hpp
sources/src/: edacurry.cpp  enums.cpp  factory.cpp  json_parser.cpp
sources/src/antlr4parser/: ELDOLexer.cpp  ELDOParser.cpp  ELDOParserBaseListener.cpp  ELDOParserBaseVisitor.cpp  ELDOParserListener.cpp  ELDOParserVisitor.cpp  SPECTRELexer.cpp  SPECTREParser.cpp  SPECTREParserBaseListener.cpp  SPECTREParserBaseVisitor.cpp  SPECTREParserListener.cpp  SPECTREParserVisitor.cpp
sources/src/backend/: eldo_backend.cpp  json_backend.cpp  xml_backend.cpp
sources/src/edacurry/: edacurry.cpp  enums.cpp  factory.cpp
sources/src/edacurry/backend/: eldo_backend.cpp  json_backend.cpp  xml_backend.cpp
sources/src/edacurry/features/: named_object.cpp  visitable_object.cpp
sources/src/edacurry/frontend/: eldo_frontend.cpp  json_frontend.cpp  spectre_frontend.cpp  xml_frontend.cpp
sources/src/edacurry/structure/: analysis.cpp  circuit.cpp  component.cpp  control.cpp  control_scope.cpp  expression.cpp  expression_unary.cpp  function_call.cpp  identifier.cpp  include.cpp  library.cpp  library_def.cpp  model.cpp  node.cpp  number.cpp  object.cpp  parameter.cpp  string.cpp  subckt.cpp  value.cpp  value_list.cpp  value_pair.cpp
sources/src/edacurry/utility/: logging.cpp  utility.cpp
sources/src/features/: named_object.cpp  visitable_object.cpp
sources/src/frontend/: eldo_frontend.cpp  json_frontend.cpp  spectre_frontend.cpp
sources/src/structure/: analysis.cpp  circuit.cpp  component.cpp  control.cpp  control_scope.cpp  expression.cpp  expression_unary.cpp  function_call.cpp  identifier.cpp  include.cpp  library.cpp  library_def.cpp  model.cpp  node.cpp  number.cpp  object.cpp  parameter.cpp  string.cpp  subckt.cpp  value.cpp  value_list.cpp  value_pair.cpp
sources/src/utility/: json.cpp  logging.cpp  utility.cpp
sources/test/: .gitignore  ansi.py  dot_print.py  test_eldo.py  test_json.py  test_xml.py
sources/test/eldo/: alter.cir  analysis.cir  bipolar_junction_transistor.cir  capacitor.cir  components.cir  control.cir  controlled_sources.cir  global.cir  indipendent_sources.cir  inductor.cir  junction_diode.cir  junction_field_effect_transistor.cir  mesfet.cir  model.cir  mosfet.cir  option.cir  param.cir  resistor.cir  subcircuit_instance.cir  subckt.cir  switch.cir  test_json.cir  transmission_line.cir
sources/test/spectre/: capacitor.cir  oscillator.cir  resistor.cir
